--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
         <div class="unit">
           <label for="name">Full name</label>
           <input id="name" name="name" required>
-        </div>
-        <div class="unit">
           <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
         </div>
-
-        What should we call you?
-        What all your friends call you, e.g. “Liz”.
-
+        <div class="unit">
+          <label for="name">What should we call you?</label>
+          <input id="name" name="name" required>
+          <p>What all your friends call you, e.g. “Liz”.</p>
+        </div>
         Date of birth
 
         T-shirt size
