Add date of birth field

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
           <input id="name" name="name" required>
           <p>What all your friends call you, e.g. “Liz”.</p>
         </div>
-        Date of birth
-
+        <div class="unit">
+          <label for="birthdate">Date of birth</label>
+          <input id="birthdate" type="date" required>
+        </div>
         T-shirt size
         - Select a t-shirt size
         - Fitted: XS
