Add the email field to the form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             <option>Straight-cut: XL</option>
           </select>
         </div>
-        Email
+        <div class="unit xs-1 s-1">
+          <label for="email">Email</label>
+          <input id="email" type="email" name="email" required>
+        </div>
         Phone number (optional)
 
         Address
