--- a/index.html
+++ b/index.html
@@ -17,43 +17,47 @@
       <p>Trees are one of the world’s most precious renewable resources—we need your help to renew the ecosystem.</p>
     </header>
     <div class="grid">
-      <h2 class="unit">Personal details</h2>
-      <form class="grid" method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
-        <div class="unit xs-1 s-1">
-          <label for="name">Full name</label>
-          <input id="name" name="name" required>
-          <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
-        </div>
-        <div class="unit xs-1 s-1">
-          <label for="name">What should we call you?</label>
-          <input id="name" name="name" required>
-          <p>What all your friends call you, e.g. “Liz”.</p>
-        </div>
-        <div class="unit xs-1 s-1">
-          <label for="birthdate">Date of birth</label>
-          <input id="birthdate" type="date" required>
-        </div>
-        <div class="unit xs-1 s-1">
-          <label for="size">T-shirt size</label>
-          <select id="size" placeholder="Select a t-shirt size" name="size">
-            <option>Fitted: XS</option>
-            <option>Fitted: S</option>
-            <option>Fitted: M</option>
-            <option>Fitted: L</option>
-            <option>Fitted: XL</option>
-            <option>Straight-cut: XS</option>
-            <option>Straight-cut: S</option>
-            <option>Straight-cut: M</option>
-            <option>Straight-cut: L</option>
-            <option>Straight-cut: XL</option>
-          </select>
-        </div>
-        <div class="unit xs-1 s-1">
-          <label for="email">Email</label>
-          <input id="email" type="email" name="email" required>
-        </div>
-        Phone number (optional)
-
+      <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
+        <fieldset>
+          <legend class="unit xs-1 s-1">Personal details</legend>
+          <div class="unit xs-1 s-1">
+            <label for="name">Full name</label>
+            <input id="name" name="name" required>
+            <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="name">What should we call you?</label>
+            <input id="name" name="name" required>
+            <p>What all your friends call you, e.g. “Liz”.</p>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="birthdate">Date of birth</label>
+            <input id="birthdate" type="date" required>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="size">T-shirt size</label>
+            <select id="size" placeholder="Select a t-shirt size" name="size">
+              <option>Fitted: XS</option>
+              <option>Fitted: S</option>
+              <option>Fitted: M</option>
+              <option>Fitted: L</option>
+              <option>Fitted: XL</option>
+              <option>Straight-cut: XS</option>
+              <option>Straight-cut: S</option>
+              <option>Straight-cut: M</option>
+              <option>Straight-cut: L</option>
+              <option>Straight-cut: XL</option>
+            </select>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="email">Email</label>
+            <input id="email" type="email" name="email" required>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="tel">Phone number (optional)</label>
+            <input id="tel" type="tel" name="tel">
+          </div>
+        </fieldset>
         Address
         Street address
         City
