--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           </div>
           <div class="unit xs-1 s-1">
             <label for="size">T-shirt size</label>
-            <select id="size" placeholder="Select a t-shirt size" name="size">
+            <select id="size" name="size">
+              <option value="Select a t-shirt size"></option>
               <option>Fitted: XS</option>
               <option>Fitted: S</option>
               <option>Fitted: M</option>
@@ -58,27 +59,41 @@
             <input id="tel" type="tel" name="tel">
           </div>
         </fieldset>
-        Address
-        Street address
-        City
-        Postal code
-
-        Province
-        - Select a province
-        - Alberta
-        - British Columbia
-        - Manitoba
-        - New Brunswick
-        - Newfoundland & Labrador
-        - Northwest Territories
-        - Nova Scotia
-        - Nunavut
-        - Ontario
-        - Prince Edward Island
-        - Québec
-        - Saskatchewan
-        - Yukon
-
+        <hr>
+        <fieldset>
+          <legend class="unit xs-1 s-1">Address</legend>
+          <div class="unit xs-1 s-1">
+            <label for="address">Street address</label>
+            <input id="address" name="address" required>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="city">City</label>
+            <input id="city" name="city" required>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="code">Postal code</label>
+            <input id="code" name="code" required>
+          </div>
+          <div class="unit xs-1 s-1">
+            <label for="province">Province</label>
+            <select id="province" name="province">
+              <option value="Select a province"></option>
+              <option>Alberta</option>
+              <option>British Columbia</option>
+              <option>Manitoba</option>
+              <option>New Brunswick</option>
+              <option>Newfoundland & Labrador</option>
+              <option>Northwest Territories</option>
+              <option>Nova Scotia</option>
+              <option>Nunavut</option>
+              <option>Ontario</option>
+              <option>Prince Edward Island</option>
+              <option>Québec</option>
+              <option>Saskatchewan</option>
+              <option>Yukon</option>
+            </select>
+          </div>
+        </fieldset>
         What activities are you interested in helping with?
         - Digging holes
         - Getting dirty
