Add checkboxes to the experience fieldset

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             </select>
           </div>
         </fieldset>
+        <fieldset>
         What activities are you interested in helping with?
         - Digging holes
         - Getting dirty
@@ -103,19 +104,50 @@
         - Taking photos
         - Online publishing
         - Managing people
-
-        Do you have any experience with the following?
-        - Shovels
-        - Hand-held GPS
-        - Writing & blogging
-        - Photography
-        - Trail & hill climbing
-        - Bush craft
-        - ATVs
-        - Plant identification
-        - Special event planning
-        - Speaking to groups
-
+        </fieldset>
+        <fieldset glass="grid">
+          <legend class="unit xs-1 s-1">Do you have any experience with the following?</legend>
+          <div class="unit xs-1 s-1">
+            <input id="shovel" type="checkbox" name="experience">
+            <label for"shovel">Shovels</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="gps" type="checkbox" name="experience">
+            <label for"gps">Hand-held GPS</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="writing" type="checkbox" name="experience">
+            <label for"writing">Writing & blogging</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="photography" type="checkbox" name="experience">
+            <label for"photography">Photography</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="climbing" type="checkbox" name="experience">
+            <label for"climbing">Trail & hill climbing</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="craft" type="checkbox" name="experience">
+            <label for"craft">Bush craft</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="atv" type="checkbox" name="experience">
+            <label for"atv">ATVs</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="plant" type="checkbox" name="experience">
+            <label for"plant">Plant identification</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="planning" type="checkbox" name="experience">
+            <label for"planning">Special event planning</label>
+          </div>
+          <div class="unit xs-1 s-1">
+            <input id="speaking" type="checkbox" name="experience">
+            <label for"speaking">Speaking to groups</label>
+          </div>
+        </fieldset>
         Do you have a valid driver’s license?
         - Yes
         - No
