--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <div class="grid gutter-1-2">
       <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
         <fieldset>
-          <legend class="unit xs-1 s-1 push-2 mega">Personal details</legend>
+          <legend class="unit xs-1 s-1 push giga">Personal details</legend>
           <div class="unit xs-1 s-1">
             <label for="name">Full name</label>
             <input id="name" name="name" required>
-            <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+            <p class="micro italic">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
           </div>
           <div class="unit xs-1 s-1">
             <label for="name">What should we call you?</label>
             <input id="name" name="name" required>
-            <p>What all your friends call you, e.g. “Liz”.</p>
+            <p class="micro italic">What all your friends call you, e.g. “Liz”.</p>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="birthdate">Date of birth</label>
             <input id="birthdate" type="date" required>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="size">T-shirt size</label>
             <select id="size" name="size">
               <option value="Select a t-shirt size"></option>
@@ -50,31 +50,31 @@
               <option>Straight-cut: XL</option>
             </select>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="email">Email</label>
             <input id="email" type="email" name="email" required>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-2">
             <label for="tel">Phone number (optional)</label>
             <input id="tel" type="tel" name="tel">
           </div>
         </fieldset>
         <hr>
         <fieldset>
-          <legend class="unit xs-1 s-1">Address</legend>
-          <div class="unit xs-1 s-1">
+          <legend class="unit xs-1 s-1 giga push">Address</legend>
+          <div class="unit xs-1 s-1 push">
             <label for="address">Street address</label>
             <input id="address" name="address" required>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="city">City</label>
             <input id="city" name="city" required>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="code">Postal code</label>
             <input id="code" name="code" required>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push">
             <label for="province">Province</label>
             <select id="province" name="province">
               <option value="Select a province"></option>
