--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="grid gutter-1-2">
       <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
         <fieldset>
-          <legend class="unit xs-1 s-1 push giga">Personal details</legend>
+          <legend class="unit xs-1 s-1 push tera">Personal details</legend>
           <div class="unit xs-1 s-1">
             <label for="name">Full name</label>
             <input id="name" name="name" required>
@@ -61,7 +61,7 @@
         </fieldset>
         <hr>
         <fieldset>
-          <legend class="unit xs-1 s-1 giga push">Address</legend>
+          <legend class="unit xs-1 s-1 tera push">Address</legend>
           <div class="unit xs-1 s-1 push">
             <label for="address">Street address</label>
             <input id="address" name="address" required>
@@ -94,86 +94,88 @@
             <input id="code" name="code" required>
           </div>
         </fieldset>
-        <fieldset class="grid">
-          <legend class="unit xs-1 s-1">What activities are you interested in helping with?</legend>
-          <div class="unit xs-1 s-1">
+        <hr>
+        <fieldset class="grid push-2">
+          <legend class="unit xs-1 s-1 tera push-1-2">What activities are you interested in helping with?</legend>
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="digging" type="checkbox" name="activities">
             <label for="digging">Digging holes</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="dirty" type="checkbox" name="activities">
             <label for="dirty">Getting dirty</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="lifting" type="checkbox" name="activities">
             <label for="lifting">Lifting heavy objects</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="driving" type="checkbox" name="activities">
             <label for="driving">Driving people</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="transporting" type="checkbox" name="activities">
             <label for="transporting">Transporting trees</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="taking" type="checkbox" name="activities">
             <label for="taking">Taking photos</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="publishing" type="checkbox" name="activities">
             <label for="publishing">Online publishing</label>
           </div>
-            <div class="unit xs-1 s-1">
+            <div class="unit xs-1 s-1 push-1-4">
             <input id="managing" type="checkbox" name="activities">
             <label for="managing">Managing people</label>
           </div>
         </fieldset>
         <fieldset glass="grid">
-          <legend class="unit xs-1 s-1">Do you have any experience with the following?</legend>
-          <div class="unit xs-1 s-1">
+          <legend class="unit xs-1 s-1 tera push-1-2">Do you have any experience with the following?</legend>
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="shovel" type="checkbox" name="experience">
             <label for"shovel">Shovels</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="gps" type="checkbox" name="experience">
             <label for"gps">Hand-held GPS</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="writing" type="checkbox" name="experience">
             <label for"writing">Writing & blogging</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="photography" type="checkbox" name="experience">
             <label for"photography">Photography</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="climbing" type="checkbox" name="experience">
             <label for"climbing">Trail & hill climbing</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="craft" type="checkbox" name="experience">
             <label for"craft">Bush craft</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="atv" type="checkbox" name="experience">
             <label for"atv">ATVs</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="plant" type="checkbox" name="experience">
             <label for"plant">Plant identification</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="planning" type="checkbox" name="experience">
             <label for"planning">Special event planning</label>
           </div>
-          <div class="unit xs-1 s-1">
+          <div class="unit xs-1 s-1 push-1-4">
             <input id="speaking" type="checkbox" name="experience">
             <label for"speaking">Speaking to groups</label>
           </div>
         </fieldset>
-        <fieldset class="grid">
-          <legend class="unit xs-1 s-1">Do you have a valid driver’s license?</legend>
+        <hr>
+        <fieldset class="grid push-2">
+          <legend class="unit xs-1 s-1 tera push-1-2">Do you have a valid driver’s license?</legend>
           <div class="unit xs-1 s-1">
             <input type="radio" id="yes" name="license">
             <label for"yes">Yes</label>
@@ -181,8 +183,8 @@
             <label for"no">No</label>
           </div>
         </fieldset>
-        <fieldset class="grid">
-          <legend class="unit xs-1 s-1">Do you have a pick-up truck you’d be willing to use?</legend>
+        <fieldset class="grid push-2">
+          <legend class="unit xs-1 s-1 tera push-1-2">Do you have a pick-up truck you’d be willing to use?</legend>
           <div class="unit xs-1 s-1">
             <input type="radio" id="yes" name="truck">
             <label for"yes">Yes</label>
@@ -190,8 +192,8 @@
             <label for"no">No</label>
           </div>
         </fieldset>
-        <fieldset class="grid">
-          <legend class="unit xs-1 s-1">Do you have up-to-date first-aid certification?</legend>
+        <fieldset class="grid push-2">
+          <legend class="unit xs-1 s-1 tera push-1-2">Do you have up-to-date first-aid certification?</legend>
           <div class="unit xs-1 s-1">
             <input type="radio" id="yes" name="certification">
             <label for"yes">Yes</label>
@@ -199,8 +201,9 @@
             <label for"no">No</label>
           </div>
         </fieldset>
+        <hr>
         <div class="unit xs-1 s-1">
-          <label for"comments">Please let us know any comments or questions you may have.</label>
+          <label for"comments" class="tera push-1-2">Please let us know any comments or questions you may have.</label>
           <textarea id="comments" name="comments"></textarea>
         </div>
         <button class="btn btn-light" type="submit">Apply</button>
