Add padding to element

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </header>
       <div class="grid gutter-1-2">
         <form method="POST" action="https://formspree.io/dano0015@algonquinlive.com">
-          <fieldset>
+          <fieldset class="pad-t-1-2">
             <legend class="unit xs-1 s-1 push giga">Personal details</legend>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
               <label for="name">Full name</label>
