Add missing characters

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
               <label for="size">T-shirt size</label>
               <select id="size" name="size">
-                <option value="Select a t-shirt size"></option>
+                <option><label for="Select a t-shirt size"></label></option>
                 <option>Fitted: XS</option>
                 <option>Fitted: S</option>
                 <option>Fitted: M</option>
@@ -75,7 +75,7 @@
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
                 <label for="province">Province</label>
                 <select id="province" name="province">
-                  <option value="Select a province"></option>
+                  <option><label for="Select a province"></label></option>
                   <option>Alberta</option>
                   <option>British Columbia</option>
                   <option>Manitoba</option>
@@ -145,30 +145,30 @@
               </div>
             </fieldset>
           </div>
-          <fieldset glass="grid">
+          <fieldset class="grid">
             <legend class="unit xs-1 s-1 giga push-1-2">Do you have any experience with the following?</legend>
             <div class="grid">
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
                 <div class="grid">
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="shovel" type="checkbox" name="experience">
-                    <label for"shovel">Shovels</label>
+                    <label for="shovel">Shovels</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="gps" type="checkbox" name="experience">
-                    <label for"gps">Hand-held GPS</label>
+                    <label for="gps">Hand-held GPS</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="writing" type="checkbox" name="experience">
-                    <label for"writing">Writing & blogging</label>
+                    <label for="writing">Writing & blogging</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="photography" type="checkbox" name="experience">
-                    <label for"photography">Photography</label>
+                    <label for="photography">Photography</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="climbing" type="checkbox" name="experience">
-                    <label for"climbing">Trail & hill climbing</label>
+                    <label for="climbing">Trail & hill climbing</label>
                   </div>
                 </div>
               </div>
@@ -176,23 +176,23 @@
                 <div class="grid">
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="craft" type="checkbox" name="experience">
-                    <label for"craft">Bush craft</label>
+                    <label for="craft">Bush craft</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="atv" type="checkbox" name="experience">
-                    <label for"atv">ATVs</label>
+                    <label for="atv">ATVs</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="plant" type="checkbox" name="experience">
-                    <label for"plant">Plant identification</label>
+                    <label for="plant">Plant identification</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="planning" type="checkbox" name="experience">
-                    <label for"planning">Special event planning</label>
+                    <label for="planning">Special event planning</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="speaking" type="checkbox" name="experience">
-                    <label for"speaking">Speaking to groups</label>
+                    <label for="speaking">Speaking to groups</label>
                   </div>
                 </div>
               </div>
@@ -204,33 +204,33 @@
               <legend class="unit xs-1 s-1 giga push-1-2">Do you have a valid driver’s license?</legend>
               <div class="unit xs-1 s-1">
                 <input type="radio" id="yes" name="license">
-                <label for"yes" class="push-r">Yes</label>
+                <label for="yes" class="push-r">Yes</label>
                 <input type="radio" id="no" name="license">
-                <label for"no">No</label>
+                <label for="no">No</label>
               </div>
             </fieldset>
             <fieldset class="grid push-2">
               <legend class="unit xs-1 s-1 giga push-1-2">Do you have a pick-up truck you’d be willing to use?</legend>
               <div class="unit xs-1 s-1">
                 <input type="radio" id="yes" name="truck">
-                <label for"yes" class="push-r">Yes</label>
+                <label for="yes" class="push-r">Yes</label>
                 <input type="radio" id="no" name="truck">
-                <label for"no">No</label>
+                <label for="no">No</label>
               </div>
             </fieldset>
             <fieldset class="grid push-2">
               <legend class="unit xs-1 s-1 giga push-1-2">Do you have up-to-date first-aid certification?</legend>
               <div class="unit xs-1 s-1">
                 <input type="radio" id="yes" name="certification">
-                <label for"yes" class="push-r">Yes</label>
+                <label for="yes" class="push-r">Yes</label>
                 <input type="radio" id="no" name="certification">
-                <label for"no">No</label>
+                <label for="no">No</label>
               </div>
             </fieldset>
           </div>
           <hr>
           <div class="unit xs-1 s-1 push-2 pad-t">
-            <label for"comments" class="giga push-1-2 bold">Please let us know any comments or questions you may have. <i>(optional)</i></label>
+            <label for="comments" class="giga push-1-2 bold">Please let us know any comments or questions you may have. <i>(optional)</i></label>
             <textarea id="comments" name="comments"></textarea>
           </div>
           <hr>
