Add margins above text boxes

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
           <fieldset class="pad-t-1-2">
             <legend class="unit xs-1 s-1 push giga">Personal details</legend>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="name">Full name</label>
+              <label for="name" class="push-1-8">Full name</label>
               <input id="name" name="name" required>
               <p class="micro italic">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="name">What should we call you?</label>
+              <label for="name" class="push-1-8">What should we call you?</label>
               <input id="name" name="name" required>
               <p class="micro italic">What all your friends call you, e.g. “Liz”.</p>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="birthdate">Date of birth</label>
+              <label for="birthdate" class="push-1-8">Date of birth</label>
               <input id="birthdate" type="date" required>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="size">T-shirt size</label>
+              <label for="size" class="push-1-8">T-shirt size</label>
               <select id="size" name="size">
-                <option><label for="Select a t-shirt size"></label></option>
+                <option label for="Select a t-shirt size">
                 <option>Fitted: XS</option>
                 <option>Fitted: S</option>
                 <option>Fitted: M</option>
@@ -52,11 +52,11 @@
               </select>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-              <label for="email">Email</label>
+              <label for="email" class="push-1-8">Email</label>
               <input id="email" type="email" name="email" required>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
-              <label for="tel">Phone number <i>(optional)</i></label>
+              <label for="tel" class="push-1-8">Phone number <i>(optional)</i></label>
               <input id="tel" type="tel" name="tel">
             </div>
           </fieldset>
@@ -65,17 +65,17 @@
             <fieldset>
               <legend class="unit xs-1 s-1 giga push">Address</legend>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="address">Street address</label>
+                <label for="address" class="push-1-8">Street address</label>
                 <input id="address" name="address" required>
               </div>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="city">City</label>
+                <label for="city" class="push-1-8">City</label>
                 <input id="city" name="city" required>
               </div>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="province">Province</label>
+                <label for="province" class="push-1-8">Province</label>
                 <select id="province" name="province">
-                  <option><label for="Select a province"></label></option>
+                  <option label for="Select a province">
                   <option>Alberta</option>
                   <option>British Columbia</option>
                   <option>Manitoba</option>
@@ -92,7 +92,7 @@
                 </select>
               </div>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="code">Postal code</label>
+                <label for="code" class="push-1-8">Postal code</label>
                 <input id="code" name="code" required>
               </div>
             </fieldset>
@@ -106,19 +106,19 @@
                   <div class="grid">
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="digging" type="checkbox" name="activities">
-                      <label for="digging">Digging holes</label>
+                      <label for="digging" class="push-1-8">Digging holes</label>
                     </div>
                       <div class="unit xs-1 s-1 push-1-4">
                       <input id="dirty" type="checkbox" name="activities">
-                      <label for="dirty">Getting dirty</label>
+                      <label for="dirty" class="push-1-8">Getting dirty</label>
                     </div>
                       <div class="unit xs-1 s-1 push-1-4">
                       <input id="lifting" type="checkbox" name="activities">
-                      <label for="lifting">Lifting heavy objects</label>
+                      <label for="lifting" class="push-1-8">Lifting heavy objects</label>
                     </div>
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="driving" type="checkbox" name="activities">
-                      <label for="driving">Driving people</label>
+                      <label for="driving" class="push-1-8">Driving people</label>
                     </div>
                   </div>
                 </div>
@@ -126,19 +126,19 @@
                   <div class="grid">
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="taking" type="checkbox" name="activities">
-                      <label for="taking">Taking photos</label>
+                      <label for="taking" class="push-1-8">Taking photos</label>
                     </div>
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="publishing" type="checkbox" name="activities">
-                      <label for="publishing">Online publishing</label>
+                      <label for="publishing" class="push-1-8">Online publishing</label>
                     </div>
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="managing" type="checkbox" name="activities">
-                      <label for="managing">Managing people</label>
+                      <label for="managing" class="push-1-8">Managing people</label>
                     </div>
                     <div class="unit xs-1 s-1 push-1-4">
                       <input id="transporting" type="checkbox" name="activities">
-                      <label for="transporting">Transporting trees</label>
+                      <label for="transporting" class="push-1-8">Transporting trees</label>
                     </div>
                   </div>
                 </div>
@@ -152,23 +152,23 @@
                 <div class="grid">
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="shovel" type="checkbox" name="experience">
-                    <label for="shovel">Shovels</label>
+                    <label for="shovel" class="push-1-8">Shovels</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="gps" type="checkbox" name="experience">
-                    <label for="gps">Hand-held GPS</label>
+                    <label for="gps" class="push-1-8">Hand-held GPS</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="writing" type="checkbox" name="experience">
-                    <label for="writing">Writing & blogging</label>
+                    <label for="writing" class="push-1-8">Writing & blogging</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="photography" type="checkbox" name="experience">
-                    <label for="photography">Photography</label>
+                    <label for="photography" class="push-1-8">Photography</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="climbing" type="checkbox" name="experience">
-                    <label for="climbing">Trail & hill climbing</label>
+                    <label for="climbing" class="push-1-8">Trail & hill climbing</label>
                   </div>
                 </div>
               </div>
@@ -176,23 +176,23 @@
                 <div class="grid">
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="craft" type="checkbox" name="experience">
-                    <label for="craft">Bush craft</label>
+                    <label for="craft" class="push-1-8">Bush craft</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="atv" type="checkbox" name="experience">
-                    <label for="atv">ATVs</label>
+                    <label for="atv" class="push-1-8">ATVs</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="plant" type="checkbox" name="experience">
-                    <label for="plant">Plant identification</label>
+                    <label for="plant" class="push-1-8">Plant identification</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="planning" type="checkbox" name="experience">
-                    <label for="planning">Special event planning</label>
+                    <label for="planning" class="push-1-8">Special event planning</label>
                   </div>
                   <div class="unit xs-1 s-1 push-1-4">
                     <input id="speaking" type="checkbox" name="experience">
-                    <label for="speaking">Speaking to groups</label>
+                    <label for="speaking" class="push-1-8">Speaking to groups</label>
                   </div>
                 </div>
               </div>
@@ -230,8 +230,8 @@
           </div>
           <hr>
           <div class="unit xs-1 s-1 push-2 pad-t">
-            <label for="comments" class="giga push-1-2 bold">Please let us know any comments or questions you may have. <i>(optional)</i></label>
-            <textarea id="comments" name="comments"></textarea>
+            <label for="details" class="giga push-1-2 bold">Please let us know any comments or questions you may have. <i>(optional)</i></label>
+            <textarea id="details" name="details"></textarea>
           </div>
           <hr>
           <div class="text-center pad-t unit xs-1 s-1 m-1 l-1 xl-1 push-2">
