Add padding to top of paragraph

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
               <label for="name" class="push-1-8">Full name</label>
               <input id="name" name="name" required>
-              <p class="micro italic">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+              <p class="micro italic pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
               <label for="name" class="push-1-8">What should we call you?</label>
