--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <fieldset>
               <legend class="unit xs-1 s-1 giga push">Address</legend>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
-                <label for="address" class="push-1-8">Street address</label>
+                <label for="address" class="push-1-8 pad-t-1-2">Street address</label>
                 <input id="address" name="address" required>
               </div>
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
