Add missing elements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
               <p class="micro italic pad-t-1-8">Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-              <label for="name" class="push-1-8">What should we call you?</label>
-              <input id="name" name="name" required>
+              <label for="preferred" class="push-1-8">What should we call you?</label>
+              <input id="preferred" name="preferred" required>
               <p class="micro italic">What all your friends call you, e.g. “Liz”.</p>
             </div>
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
@@ -38,7 +38,7 @@
             <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
               <label for="size" class="push-1-8">T-shirt size</label>
               <select id="size" name="size">
-                <option label for="Select a t-shirt size">
+                <option label="select">Select a t-shirt size</option>
                 <option>Fitted: XS</option>
                 <option>Fitted: S</option>
                 <option>Fitted: M</option>
@@ -75,7 +75,7 @@
               <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push">
                 <label for="province" class="push-1-8">Province</label>
                 <select id="province" name="province">
-                  <option label for="Select a province">
+                  <option label="province">Select a province</option>
                   <option>Alberta</option>
                   <option>British Columbia</option>
                   <option>Manitoba</option>
